# source/routes/user.route.js
@@ -1,13 +1,18 @@
 const router = require('express').Router();
 const UserController = require('../controllers/user.controller');
-//const authenticateToken = require('../middlewares/jwt_auth.middleware');
-//const check_role = require('../middlewares/check_role.middlewares');
+const authenticateToken = require('../middlewares/jwt_auth.middleware');
+
 
 //PUBLIC
-//GET /api/user/search
-//router.get("/search",authenticateToken,UserController.findUserByUsername);
-//PUT /api/user/setpublic
-//router.put("/setpublic",authenticateToken,UserController.setPublicParam);
+//GET /api/user/search?field={field}
+router.get("/search",authenticateToken,UserController.GetUserByField);
 
+//PRIVATE
+//GET /api/user/me
+router.get("/me",authenticateToken,UserController.getMe);
+//PUT /api/user/me
+router.put("/me",authenticateToken,UserController.updateMe);
+//DELETE /api/user/me
+router.delete("/me",authenticateToken,UserController.deleteMe);
 
 module.exports = router;
